; ModuleID = '/home/carl/AnghaBench/mpv/video/filter/extr_refqueue.c_mp_refqueue_next_field.c'
source_filename = "/home/carl/AnghaBench/mpv/video/filter/extr_refqueue.c_mp_refqueue_next_field.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_refqueue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_refqueue*)* @mp_refqueue_next_field to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mp_refqueue_next_field(%struct.mp_refqueue* %0) #0 {
  %2 = alloca %struct.mp_refqueue*, align 8
  store %struct.mp_refqueue* %0, %struct.mp_refqueue** %2, align 8
  %3 = load %struct.mp_refqueue*, %struct.mp_refqueue** %2, align 8
  %4 = call i32 @mp_refqueue_has_output(%struct.mp_refqueue* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %14

7:                                                ; preds = %1
  %8 = load %struct.mp_refqueue*, %struct.mp_refqueue** %2, align 8
  %9 = call i32 @output_next_field(%struct.mp_refqueue* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %7
  %12 = load %struct.mp_refqueue*, %struct.mp_refqueue** %2, align 8
  %13 = call i32 @mp_refqueue_next(%struct.mp_refqueue* %12)
  br label %14

14:                                               ; preds = %6, %11, %7
  ret void
}

declare dso_local i32 @mp_refqueue_has_output(%struct.mp_refqueue*) #1

declare dso_local i32 @output_next_field(%struct.mp_refqueue*) #1

declare dso_local i32 @mp_refqueue_next(%struct.mp_refqueue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
